# melquiades-deck

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  support.yml
Arduino/MelquiadesDeck/: GenkkoDeck.ino
Espressif/melquiades-deck/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.old
Espressif/melquiades-deck/main/: CMakeLists.txt  melquiades_deck_main.c  state.c  state.h
Espressif/melquiades-deck/main/audio/: audio_dsp.c  audio_dsp.h  audio_output.c  audio_output.h  sine_wave.c  sine_wave.h
Espressif/melquiades-deck/main/bluetooth/: a2dp_sink.c  a2dp_sink.h  bluetooth_common.c  bluetooth_common.h  init.c  init.h  spp_init.c
Espressif/melquiades-deck/main/leds/: board.c  board.h
Espressif/melquiades-deck/main/sensors/: buttons.c  buttons.h  potentiometers.c  potentiometers.h
Espressif/melquiades-deck/main/shell/: bt_shell.c  bt_shell.h  common_shell.c  common_shell.h  shell_init.c  shell_init.h  uart_shell.c  uart_shell.h
Pin Diagrams/: Ha204b20d14d243faa0c1a8760de1b187r.avif
showcase/python/: README.md  bt_connection.py  requirements.txt  testing_connections.py
