idf_component_register(
    SRCS    "melquiades_deck_main.c"
            "state.c"
            "audio/audio_dsp.c"
            "audio/audio_output.c"
            "audio/sine_wave.c"
            "bluetooth/a2dp_sink.c"
            "bluetooth/bluetooth_common.c"
            "bluetooth/spp_init.c"            
            "leds/board.c"
            "sensors/buttons.c"
            "sensors/potentiometers.c"
            "shell/bt_shell.c"
            "shell/shell_init.c"            
            "shell/uart_shell.c"
    INCLUDE_DIRS "audio" "bluetooth" "leds" "sensors" "shell"    
)
